prepare for submission

--- a/tester/Makefile
+++ b/tester/Makefile
@@ -6,13 +6,6 @@ CXX = g++
 CFLAGS=
 LIBS = -lg++
 
-OUTPUTFILE = kamincpp.exe
-UNAME := $(shell uname)
-ifeq ($(UNAME), Darwin)
-	OUTPUTFILE = kamincpp.out
-endif
-
-
 #     The following two rules add automaticity to c++ suffixes
 .SUFFIXES: .cc .C
 .cc.o:
@@ -23,4 +16,4 @@ endif
 ifiles = main.o reader.o expression.o list.o function.o environment.o lisp.o
 
 kamincpp: $(ifiles) chap2.o
-	g++ -o $(OUTPUTFILE) $(ifiles) chap2.o
+	g++ -o kamincpp $(ifiles) chap2.o
